data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1150.wast
;; 1. **Test Description**: A `br_table` instruction with an index value of `0` but no target labels provided.    - **Constraint Checked**: Validity of index lookup when the index is `0` but the target labels list is empty.    - **Edge Case Relation**: Tests if implementations correctly handle an empty target labels list with a valid index.

(assert_invalid
  (module
    (func $br_table_empty_target
      (br_table 0)
    )
  )
  "out of range branch table index"
)